# rocq-agent-toolkit

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  dune-project  prompt.md  proposal.md  pyproject.toml.disabled  readme.md  run.sh
backend/: Dockerfile  README.md  pyproject.toml  readme.md
backend/client/: ingester.py
backend/tests/: test_cases.py
dashboard/backend/: Dockerfile  README.md  pyproject.toml
ltac2-derive/: README.md  dune-project  ltac2-derive.opam
ltac2-derive/plugin/: derive.ml  derive.mli  dune  g_derive.mlg
ltac2-derive/tests/: dune
ltac2-derive/theories/: derive.v  dune
ltac2-json/: README.md  dune-project  ltac2-json.opam
ltac2-json/plugin/: derive_json.ml  dune  json.ml
ltac2-json/tests/: dune
ltac2-json/theories/: JSON.v  dune
observability/: README.md  __init__.py  config.py  pyproject.toml  requirements copy.txt  requirements.txt  setup.py
observability/core/: __init__.py  decorators.py  metrics.py
observability/docker_compose/: docker-compose.rocq.yml
observability/example_loging/: test_logging.py
observability/examples/: DASHBOARD_README.md  README.md  Streaming_asynch_logging_USAGE_GUIDE.md  TRACING_GUIDE.md  basic_logs.py  event_based_custom_logs.py  event_based_custom_logs_with_tracing.py  event_based_logs.py  logging_example.py  sample_dashboard.json  test_logs_sizes.py
observability/extract_training_data/: extract_training_examples.py
observability/extractors/: __init__.py  base.py  custom.py  langchain.py  workflow.py
observability/observability_docker_compose/: docker-compose.local.yml  docker-compose.rocq.s3.yml  docker-compose.rocq.yml  docker-compose.s3.yml  docker-compose.yml
observability/tests/: __init__.py  test_config.py  test_extractors.py  test_logging_core.py  test_setup_core.py  test_simple.py
ocaml-jsonrpc-tp/: README.md  dune-project  jsonrpc-tp.opam
ocaml-jsonrpc-tp/lib/: API.ml  API.mli  base.ml  base.mli  dune  jsonrpc_tp.ml  jsonrpc_tp_api.ml  jsonrpc_tp_api.mli  jsonrpc_tp_loop.ml  jsonrpc_tp_loop.mli  packet.ml  packet.mli  service.ml  service.mli  with_eio.ml
ocaml-jsonrpc-tp/python/: README.md  pyproject.toml
ocaml-jsonrpc-tp/tests/: dune  echo-api.t  echo-service-many.t  echo-service.t  requests.t  test-api-many.t  test-api.t  test-large-packet.t  test-service.t  tp_wrap_unwrap.t
ocaml-rocq-loc/: dune-project  rocq-loc.opam
ocaml-rocq-loc/lib/: dune  rocq_loc.mli
ocaml-rocq-simple-api/: README.md  dune-project  rocq-simple-api.opam
ocaml-rocq-simple-api/tests/: bad-args.t  basic.t  dune  fork.t  leading_trailing.t  module.t  module_type.t  section.t  stm-bug.t
ocaml-rocq-split/: README.md  dune  dune-project  main.ml  rocq-split.opam  rocq_split.opam
ocaml-rocq-split/tests/: basic.t  dune  error.t
ocaml-rocq-toplevel-api/: README.md  dune-project  rocq-toplevel-api.opam
ocaml-rocq-toplevel-api/tests/: bad-args.t  basic.t  dune  fork.t  leading_trailing.t  module.t  module_type.t  section.t
provenance-toolkit/: README.md  pyproject.toml
provenance-toolkit/tests/: test_FinalNamespaceMeta.py  test_Provenance_ClassIdentity.py  test_Provenance_Full.py  test_Provenance_Reflect.py  test_Provenance_Version.py  test_Provenance_namespace.py  test_Signature_namespace.py  test_WithVersionSignature.py  test_examples_extension.py  test_method_types.py  test_provenance.py
psi-agents/: pyproject.toml
psi-agents/examples/: dune-project
psi-agents/tests/: test_hammer_agent.py
pyroof-search/: pyproject.toml
pyroof-search/tests/: rollout_util.py  test.v  test_beam.py  test_composite_strategy.py  test_deduplicate_rollout.py  test_frontier_bfs_dfs.py  test_frontier_deduplicate.py  test_frontier_pqueue.py  test_grid_beam.py  test_interleaver.py  test_rollout.py  test_search_core.py  test_search_max_depth.py  test_search_repetition.py  test_search_state_manip.py  test_strategy_agent.py
remote_agent_client/: README.md  pyproject.toml  tasks_results_20260209_1700.jsonl
rocq-agent/: README.md  pyproject.toml
rocq-agent-toolkit-utils/: README.md  pyproject.toml
rocq-agent-toolkit-utils/tests/: test_json.py  test_object.py
rocq-agent-tools-pydantic/: pyproject.toml
rocq-agent-tools-pydantic/tests/: concurrent_tools.t  dune-project  simple_tools.t  test_tools.py
rocq-agent/tests/: dune-project  simple_tools.t
rocq-doc-manager/: README.md  README.md.prefix  dune  dune-project  rocq-doc-manager.opam
rocq-doc-manager/lib/: document.ml  document.mli  dune  rocq_args.ml  rocq_args.mli
rocq-doc-manager/python/: README.md  dune  pyproject.toml  rocq_doc_manager.py
rocq-doc-manager/tests/: advance.t  basic.t  cursor.t  cursors.t  diagnose-error.t  diagnose-ok.t  diagnose-parse-error.t  dune  echo.t  get_deps.t  query.t  replace_suffix.t  revert.t  rocq-query.t  sentence_split.t  suffix.t
rocq-dune-util/: README.md  pyproject.toml
rocq-fake-repl/: README.md  dune-project  rocq-fake-repl.opam
rocq-fake-repl/test/: dune
rocq-get-env/: README.md  dune-project  rocq-get-env.opam
rocq-get-env/plugin/: dune  g_get_env.mlg  get_env.ml
rocq-get-env/tests/: basic.t  dune
rocq-get-env/theories/: dune  plugin.v
rocq-goal-to-json/: README.md  dune-project  rocq-goal-to-json.opam  rocq-goal-to-json_iris.opam
rocq-jsonrpc-repl/: README.md  dune-project  rocq-jsonrpc-repl.opam
rocq-jsonrpc-repl/lib/: dune  rocq_toplevel.ml  rocq_toplevel.mli
rocq-jsonrpc-repl/tests/: basic.t  dune  module.t  module_type.t  section.t
rocq-pipeline/: README.md  SEARCH_CHANGELOG.md  pyproject.toml
rocq-pipeline/examples/: dune  dune-project  tasks.yaml
rocq-pipeline/tests/: Factorial_longlong.v  __init__.py  test_auto_agent.py  test_beam.py  test_branch_expr-stmt.py  test_choice_agent.py  test_filter_tags.py  test_find_task.py  test_locator.py  test_modifier_parser.py  test_oracle_agent.py  test_parse_decide_condition.py  test_proof_state.py  test_scan_proof.py  util.py  (+6 more)
rocq-remote-agent/: README.md  pyproject.toml
rocq-session/: README.md  pyproject.toml
rocq-tactic-parser/: dune-project
rocq-term-deps/: README.md  dune-project  rocq-term-deps.opam
(+1116 files in other folders)
