(lang dune 3.17)
(using coq 0.10)
(name ltac2-json)
(generate_opam_files true)

(source (github SkylabsAI/skylabs-fm))
(authors "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(maintainers "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(license  GPL-2.0-or-later)

(package
 (name ltac2-json)
 (synopsis "Ltac2 library providing JSON primitives in Ltac2")
 (depends
  coq-core ; since rocq-core lacks coqpp
  rocq-core rocq-stdlib
  ltac2-derive
  yojson))

(subst disabled)
