[project]
name = "observability"
version = "0.1.0"
description = "A comprehensive, production-ready observability solution that works with any Python application."
authors = [
    {name = "SkyLabs Team", email = "support@skylabs-ai.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-api>=1.12.0",
    "opentelemetry-sdk>=1.12.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.12.0",
    "opentelemetry-instrumentation-grpc>=0.39b0",
    "opentelemetry-instrumentation-requests>=0.39b0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-logstash-async>=2.5.0",
]

[tool.poetry]
packages = [{include = "observability", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
