(lang dune 3.17)
(name rocq-loc)
(generate_opam_files true)

(source (github SkylabsAI/skylabs-fm))
(authors "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(maintainers "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(license  GPL-2.0-or-later)

(package
 (name rocq-loc)
 (synopsis "Rocq source code location library with JSON serialization")
 (depends
  rocq-core
  yojson
  ppx_deriving_yojson))

(subst disabled)
