(lang dune 3.21)
(name rocq-simple-api)
(generate_opam_files true)

(source (github SkylabsAI/skylabs-fm))
(authors "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(maintainers "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(license  LGPL-2.1-onl)

(package
 (name rocq-simple-api)
 (synopsis "Collection of process-isolated Rocq APIs")
 (depends
  rocq-core
  yojson
  ppx_deriving_yojson))

(subst disabled)
