[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psi-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Gregory Malecha",email = "gregory@bluerock.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.uv]

[tool.uv.sources]
rocq-pipeline = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["src/psi_agent"]

[tool.hatch.build.targets.wheel]
include = ["src/psi_agent"]

[tool.hatch.build.targets.wheel.sources]
"src/psi_agent" = "psi_agent"

[tool.setuptools.packages.find]
where = ["src", "tests"]
