[project]
name = "remote-agent-client"
version = "0.1.0"
description = "Client (protocol + proxy CLI) for Remote Agent server"
readme = "README.md"
authors = [
    { name = "Ehtesham Zahoor", email = "ehtesham.zahoor@skylabs-ai.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "rocq-doc-manager",
    "pydantic>=2.7.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2",
    "ruff>=0.14.2",
    "taskipy>=1.14.1",
]

[tool.uv]

[tool.uv.sources]
rocq-doc-manager = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
rocq-remote-rdm-proxy = "remote_agent_client.proxy_cli:main"

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"] # line too long, handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disable_error_code = ["import-untyped"]

[tool.taskipy.tasks]
format_ci = "ruff format --check src/"
reformat = "ruff format src/ && ruff check src/ --fix"
typecheck_ci = "mypy src/"
