[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocq-agent-toolkit-utils"
version = "0.1.0"
description = "Rocq Agent Toolkit -- Shared Python Utilities"
authors = [
    { name = "Jasper Haag", email = "jasper@skylabs-ai.com" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pydantic>=2.12.0",
]

[project.urls]
Repository = "https://github.com/SkylabsAI/rocq-agent-toolkit"
Issues = "https://github.com/SkylabsAI/rocq-agent-toolkit/issues"
Changelog = "https://github.com/SkylabsAI/rocq-agent-toolkit/tree/main/changes"

# For now, no scripts
# [project.scripts]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.3.0",
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.0.0,<7",
    "mypy>=1.18.2,<2",
    "pyright>=1.1.407",
    "ty>=0.0.14",
    "ruff>=0.14.4",
    "taskipy>=1.14.1",
]

[tool.uv]

[tool.hatch.build.targets.sdist]
include = ["src/rocq_agent_toolkit_utils"]

[tool.hatch.build.targets.wheel]
include = ["src/rocq_agent_toolkit_utils"]

[tool.hatch.build.targets.wheel.sources]
"src/rocq_agent_toolkit_utils" = "rocq_agent_toolkit_utils"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rocq_agent_toolkit_utils" = ["py.typed"]

[tool.taskipy.tasks]
lint_ci = "ruff check"
format_ci = "ruff format --check"
reformat = "ruff format"
typecheck_ci = "mypy --check-untyped-defs .; pyright .; ty check ."
test_ci = "pytest tests/"
precommit = "task lint_ci --fix; task reformat; task typecheck_ci; task test_ci"
