[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocq-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pydantic-ai>=1.5.0",
    "rocq-doc-manager",
    "rocq-pipeline",
    "vllm>=0.11.2",
]

[tool.uv.sources]
rocq-doc-manager = { workspace = true }
rocq-pipeline = { workspace = true }

[project.scripts]
rocq-agent = "rocq_agent.agent:main"

[tool.hatch.build.targets.wheel]
include = ["src/rocq_agent"]

[tool.hatch.build.targets.wheel.sources]
"src/rocq_agent" = "rocq_agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rocq_agent" = ["py.typed"]
