(lang dune 3.21)
(using rocq 0.11)
(name rocq-get-env)
(generate_opam_files true)

(source (github SkylabsAI/skylabs-fm))
(authors "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(maintainers "Rodolphe Lepigre <rodolphe.lepigre@skylabs-ai.com>")
(license  GPL-2.0-or-later)

(package
 (name rocq-get-env)
 (synopsis "Rocq plugin for extracting the contents of the environment")
 (depends
  coq-core ; since rocq-core lacks coqpp
  rocq-core))

(subst disabled)
