[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocq-pipeline"
version = "0.1.0"
description = "Rocq Agent Toolkit"
authors = [
    { name = "Gregory Malecha", email = "gregory@skylabs-ai.com" },
    { name = "Jasper Haag", email = "jasper@skylabs-ai.com" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "jmespath>=1.0.1,<2",
    "rocq-doc-manager",
    "observability",
    "dotenv>=0.9.9",
    "rich>=14.2.0",
    "rich-progress>=0.4.0",
    "httpx>=0.27.0,<0.29.0",
]

[project.urls]
Repository = "https://github.com/SkylabsAI/skylabs-fm"
Issues = "https://github.com/SkylabsAI/skylabs-fm/issues"
Changelog = "https://github.com/SkylabsAI/skylabs-fm/tree/main/changes"

[project.scripts]
rat = "rocq_pipeline.cli:main"
ingest = "rocq_pipeline.find_tasks:main"
tracer = "rocq_pipeline.tracer:main"
auto-agent = "rocq_pipeline.task_runner:auto_main"
tactic-agent = "rocq_pipeline.task_runner:tactic_main"
progress = "rocq_pipeline.util:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.0.0,<7",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
    "types-jmespath>=1.0.2.20250809,<2",
    "ruff>=0.14.4",
    "taskipy>=1.14.1",
    "cram>=0.7",
]

[tool.uv]

[tool.uv.sources]
observability = {path = "./../../../psi/backend/psi_verifier/observability", editable = true}
rocq-doc-manager = { path = "./../rocq-doc-manager/python", editable = true }

[tool.hatch.build.targets.sdist]
include = ["src/rocq_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/rocq_pipeline"]

[tool.hatch.build.targets.wheel.sources]
"src/rocq_pipeline" = "rocq_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rocq_pipeline" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.taskipy.tasks]
format_ci = "ruff check src/ tests/"
typecheck_ci = "mypy src/ tests/"
test_ocaml_ci = "pytest"
cram_ocaml_ci = "cram tests/*.t"
