[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocq-pipeline"
version = "0.1.0"
description = "Rocq Agent Toolkit"
authors = [
    { name = "Gregory Malecha", email = "gregory@skylabs-ai.com" },
    { name = "Jasper Haag", email = "jasper@skylabs-ai.com" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "jmespath>=1.0.1,<2",
    "rocq-doc-manager",
    "observability",
    "provenance-toolkit",
    "dotenv>=0.9.9",
    "rich>=14.2.0",
    "rich-progress>=0.4.0",
    "httpx>=0.27.0,<0.29.0",
]

[project.urls]
Repository = "https://github.com/SkylabsAI/rocq-agent-toolkit"
Issues = "https://github.com/SkylabsAI/rocq-agent-toolkit/issues"
Changelog = "https://github.com/SkylabsAI/rocq-agent-toolkit/tree/main/changes"

[project.scripts]
rat = "rocq_pipeline.cli:main"
ingest = "rocq_pipeline.find_tasks:main"
tracer = "rocq_pipeline.tracer:main"
auto-agent = "rocq_pipeline.task_runner:auto_main"
tactic-agent = "rocq_pipeline.task_runner:tactic_main"
oracle-agent = "rocq_pipeline.agent.proof.oracle_agent:main"
progress = "rocq_pipeline.util:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.0.0,<7",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
    "types-jmespath>=1.0.2.20250809,<2",
    "ruff>=0.14.4",
    "taskipy>=1.14.1",
    "cram>=0.7",
]

[tool.uv]

[tool.uv.sources]
observability = { workspace = true }
provenance-toolkit = { workspace = true }
rocq-doc-manager = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["src/rocq_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/rocq_pipeline"]

[tool.hatch.build.targets.wheel.sources]
"src/rocq_pipeline" = "rocq_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rocq_pipeline" = ["py.typed"]

[tool.taskipy.tasks]
lint_ci = "ruff check"
format_ci = "ruff format --check"
reformat = "ruff format"
typecheck_ci = "mypy ."
test_ocaml_ci = "pytest"
cram_ocaml_ci = "cram tests/*.t"
# TODO: setup tests that can run using `dune exec`, akin to what rocq-doc-manager does
precommit = "task lint_ci --fix; task reformat; task typecheck_ci"