[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocq-pipeline"
version = "0.1.0"
description = "Rocq Agent Toolkit"
authors = [
    { name = "Gregory Malecha", email = "gregory@skylabs-ai.com" },
    { name = "Jasper Haag", email = "jasper@skylabs-ai.com" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "jmespath>=1.0.1,<2",
    "rocq-doc-manager",
    "observability",
    "provenance-toolkit",
    "dotenv>=0.9.9",
    "rich>=14.2.0",
    "rich-progress>=0.4.0",
    "httpx>=0.27.0,<0.29.0",
    "pydantic>=2.12.0",
    "sexpdata>=1.0.2",
    "gitpython>=3.1.45",
    "logging>=0.4.9.6",
]

[project.urls]
Repository = "https://github.com/SkylabsAI/rocq-agent-toolkit"
Issues = "https://github.com/SkylabsAI/rocq-agent-toolkit/issues"
Changelog = "https://github.com/SkylabsAI/rocq-agent-toolkit/tree/main/changes"

[project.scripts]
rat = "rocq_pipeline.cli:main"
ingest = "rocq_pipeline.find_tasks:main"
tracer = "rocq_pipeline.tracer:main"
auto-agent = "rocq_pipeline.task_runner:auto_main"
auto-prover = "rocq_pipeline.prover:auto_prover"
tactic-agent = "rocq_pipeline.task_runner:tactic_main"
oracle-agent = "rocq_pipeline.agent.proof.oracle_agent:main"
progress = "rocq_pipeline.util:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.3.0",
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.0.0,<7",
    "mypy>=1.18.2,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
    "types-jmespath>=1.0.2.20250809,<2",
    "ruff>=0.14.4",
    "taskipy>=1.14.1",
    "cram>=0.7",
]

[tool.uv]

[tool.uv.sources]
observability = { workspace = true }
provenance-toolkit = { workspace = true }
rocq-doc-manager = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["src/rocq_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/rocq_pipeline"]

[tool.hatch.build.targets.wheel.sources]
"src/rocq_pipeline" = "rocq_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rocq_pipeline" = ["py.typed"]

### Taskipy
##
## The following "task groups" are exposed:
## - codegen: tasks that generate code needed by later stages
## - check_style: tasks that check style rules but don't make changes
## - style: tasks that check style rules and attempt to fix mistakes
## - typecheck: tasks that run typechecking
## - test: tasks that run executable tests
## - precommit: uniform target for local dev workflows
## - ci: uniform target for CI integrations
##
## Notes:
## - _XXX tasks are the same as XXX tasks, but without pre-task hooks
## - pre_XXX tasks must succeed for XXX to run
## - XXX must succeed for post_XXX to run

[tool.taskipy.settings]
# run all tasks from the directory containing pyproject.toml
cwd = "."
# allow all tasks to use taskipy variables
use_vars = true
[tool.taskipy.variables]
typecheck_targets = "."
pytest_targets = "tests/"
cram_targets = "tests/*.t"

## Main Tasks w/Pre-Hooks
[tool.taskipy.tasks.__ENTRYPOINTS__]
cmd = "true"
help = "top level tasks to run, with pre-hooks & stop-on-failure"
[tool.taskipy.tasks.precommit]
cmd = "task test_ocaml"
help = "run before pushing a commit"
[tool.taskipy.tasks.codegen]
cmd = "true"
help = "run code generation"
[tool.taskipy.tasks.check_style]
cmd = "task _check_style"
help = "check style compliance"
[tool.taskipy.tasks.style]
cmd = "task _style"
help = "try to fix style violations"
[tool.taskipy.tasks.typecheck]
cmd = "task _typecheck"
help = "run typecheckers"
[tool.taskipy.tasks.test_ocaml]
cmd = "task _test_ocaml"
help = "run tests (note: toolchain must be installed)"

## Pre-Hooks
[tool.taskipy.tasks.__ENTRYPOINT_HOOKS__]
cmd = "true"
help = "codegen -> style -> typecheck -> test_ocaml"
[tool.taskipy.tasks.pre_check_style]
cmd = "task codegen"
help = "codegen must succeed before task check_style can run"
[tool.taskipy.tasks.pre_style]
cmd = "task codegen"
help = "codegen must succeed before task style can run"
[tool.taskipy.tasks.pre_typecheck]
cmd = "task check_style"
help = "check_style must succeed before task typecheck can run"
[tool.taskipy.tasks.pre_test_ocaml]
cmd = "task typecheck"
help = "typecheck must succeed before task test_ocaml can run"

## Main Tasks w/out Pre-Hooks
[tool.taskipy.tasks.__RAW_ENTRYPOINTS__]
cmd = "true"
help = "top level tasks to run, without pre-hooks & proceed-on-failure"
[tool.taskipy.tasks._precommit]
cmd = "task codegen; task _style; task _typecheck; task _test_ocaml"
help = "run before pushing a commit"
[tool.taskipy.tasks._check_style]
cmd = "task check_format; task check_lint"
help = "check style compliance"
[tool.taskipy.tasks._style]
cmd = "task format && task lint"
help = "try to fix style violations"
[tool.taskipy.tasks._typecheck]
cmd = "task mypy"
help = "run typecheckers"
[tool.taskipy.tasks._test_ocaml]
cmd = "task pytest_ocaml; task cram_ocaml"
help = "run tests (note: toolchain must be installed)"

## Tasks
[tool.taskipy.tasks.__TASKS__]
cmd = "true"
help = "constituent tasks used by entrypoints"
### Check Style
[tool.taskipy.tasks.check_format]
cmd = "ruff format --check"
help = "check format compliance"
[tool.taskipy.tasks.check_lint]
cmd = "ruff check"
help = "check lint compliance"
### Style
[tool.taskipy.tasks.reformat]
cmd = "ruff format"
help = "try to fix formatting violations"
[tool.taskipy.tasks.lint]
cmd = "ruff check --fix"
help = "try to fix linting violations"
### Typechecking
[tool.taskipy.tasks.mypy]
cmd = "mypy {typecheck_targets}"
help = "run mypy"
### Testing
# TODO: setup tests that can run using `dune exec`, akin to what rocq-doc-manager does
[tool.taskipy.tasks.pytest_ocaml]
cmd = "pytest {pytest_targets}"
help = "run pytest (note: toolchain must be installed)"
[tool.taskipy.tasks.cram_ocaml]
cmd = "cram {cram_targets}"
help = "run cram (note: toolchain must be installed)"

## CI
[tool.taskipy.tasks.__CI__]
cmd = "true"
help = "efficient sequencing of tasks for use in CI jobs"
[tool.taskipy.tasks]
ci = "task codegen && task _check_style && task _typecheck && task _test_ocaml"
